src/test/ui/consts/const-int-ref.vanilla.stderr
error[E0080]: it is undefined behavior to use this value
  --> $DIR/const-int-ref.rs:14:1
   |
LL | const GPIO: &i32 = unsafe { Transmute { int: 0x800 }.ptr };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered a dangling reference (created from integer). Add `#![feature(const_int_ref)]` to the crate attributes to enable
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
